# telegram_digest_service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
core/: core.py
core/config/: logging.py  settings.py
core/llm/: client.py  promts.py
core/telegram/: client.py
