[project]
name = "stanintech-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.6",
    "cryptg>=0.5.0.post0",
    "hachoir>=3.3.0",
    "openai>=1.82.1",
    "orjson>=3.10.18",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "structlog>=25.3.0",
    "telethon>=1.40.0",
]
